# router/task.go
@@ -13,9 +13,13 @@ func initTaskRoutes(router *gin.Engine) {
 	docs.SwaggerInfo.BasePath = basePath
 	api := router.Group(basePath)
 
-	api.POST("/task", helper.AuthMiddleware(), task.CreateTaskHandler)
-	//api.DELETE("/category", helper.AuthMiddleware(), category.DeleteCategoryHandler)
-	//api.POST("/category", helper.AuthMiddleware(), category.CreateCategoryHandler)
-	//api.GET("/category", helper.AuthMiddleware(), category.GetCategoryHandler)
+	api.POST("/task/rule", helper.AuthMiddleware(), task.CreateTaskRuleHandler)
+	api.DELETE("/task/rule", helper.AuthMiddleware(), task.DeleteTaskRuleHandler)
+	api.GET("/task/rule", helper.AuthMiddleware(), task.GetTaskRuleHandler)
+	api.PUT("/task/rule", helper.AuthMiddleware(), task.UpdateTaskRuleHandler)
+
+	api.GET("/tasks", helper.AuthMiddleware(), task.GetAllTasksRulesHandler)
+	api.GET("/tasks/week", helper.AuthMiddleware(), task.GetWeekTasksHandler)
+	api.PUT("/task", helper.AuthMiddleware(), task.UpdateTaskStatusHandler)
 
 }
